fix: Fix for interface ownership of digital blocking analog
